Modify preprocess.yml to install requirement.txt properly. Rewrite preprocess_csv.py.

--- a/.github/workflows/preprocess.yml
+++ b/.github/workflows/preprocess.yml
@@ -1,15 +1,15 @@
-name: Preprocess CSV and Generate RST
+name: Preprocess CSV to RST
 
 on:
   push:
     paths:
-      - 'data.csv'
-      - 'preprocess_csv.py'
-      - '.github/workflows/preprocess.yml'
-  workflow_dispatch:
+      - data.csv
+      - preprocess_csv.py
+      - requirements.txt
+      - .github/workflows/preprocess.yml
 
 jobs:
-  build-docs:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,21 +19,18 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.10'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      - name: Install Python dependencies
+        run: pip install -r requirements.txt
 
       - name: Run preprocessing script
         run: python preprocess_csv.py
 
-      - name: Commit generated RST file
+      - name: Commit updated translation.rst
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add docs/translation.rst
           git commit -m "Auto-update translation.rst from CSV"
           git push
-        continue-on-error: true  # Don't fail if there's no change
