--- a/.github/workflows/preprocess.yml
+++ b/.github/workflows/preprocess.yml
@@ -8,6 +8,9 @@ on:
       - requirements.txt
       - .github/workflows/preprocess.yml
 
+permissions:
+  contents: write  # Allows pushing back to the repo
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,10 +30,12 @@ jobs:
       - name: Run preprocessing script
         run: python preprocess_csv.py
 
-      - name: Commit updated translation.rst
+      - name: Commit and push updated translation.rst
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add docs/translation.rst
-          git commit -m "Auto-update translation.rst from CSV"
+          git commit -m "Auto-update translation.rst from CSV" || echo "No changes to commit"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
