--- a/.github/workflows/preprocess.yml
+++ b/.github/workflows/preprocess.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add docs/translation.rst
+          git add docs/source/translation.rst
           git commit -m "Auto-update translation.rst from CSV" || echo "No changes to commit"
           git push
         env:
