--- a/.github/workflows/preprocess.yml
+++ b/.github/workflows/preprocess.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Fetch all history for better merge handling
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -34,6 +36,10 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # Pull latest changes to avoid conflicts
+          git pull origin ${{ github.ref_name }} --rebase || git pull origin ${{ github.ref_name }} --no-edit
+          
           git add docs/source/translation.rst
           git commit -m "Auto-update translation.rst from CSV" || echo "No changes to commit"
           git push
