Update gitignore to include translation.rst.

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,6 @@ dmypy.json
 cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks
+
+# Constantly update translation.rst. No need to git pull before committing.
+translation.rst
